# MLP-network-from-scratch

./: CMakeLists.txt  README.md  layers.cpp  layers.h  main.cpp  matrix.cpp  matrix.h  model.cpp  model.h  modeldefinition.h  perceptron.cpp  perceptron.h
